[package]
name = "spspf-template"
version = "0.1.0"
edition = "2021"

[dependencies]
psp = { path = "/home/tuxdev/dev/third-party/rust-psp/psp" }
spspf-core = { path = "../../spspf-core" }
spspf-graphics = { path = "../../spspf-graphics" }
spspf-audio = { path = "../../spspf-audio" }

[profile.release]
debug = true
